Fixed font to improve readablity improved text

--- a/style/base/_top-level.scss
+++ b/style/base/_top-level.scss
@@ -5,7 +5,7 @@ body {
   //font-family: 'Source Sans Pro', sans-serif;
   font-family: $body-font;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.4;
 }
 
